--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,9 @@ header {
     border: 4px solid red;
     flex-wrap: wrap;
 }
+
+#square-div {
+    height: 16px;
+    width: 16px;
+    background-color: blue;
+}
