--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,27 @@ header {
     background-color: lightgrey;
     /* flex-grow: 1; */
 }
+#container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
 #grid-container {
-    max-width: 960px;
     height: auto;
     display: flex;
-    border: 4px solid red;
+    flex-direction: column;
+    border: solid black;
     flex-wrap: wrap;
 }
 
-#square-div {
-    height: 16px;
-    width: 16px;
+.row-div {
+    display: flex;
+}
+
+.square-div {
+    height: 60px;
+    width: 60px;
     background-color: blue;
+    border: solid aliceblue;
 }
