--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,13 @@ header {
 }
 
 #grid-container {
+    max-width: 960px;
     height: auto;
+    line-height: 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-content: center;
     /* border: solid black; */
     flex-wrap: wrap;
 }
@@ -37,8 +41,6 @@ header {
 }
 
 .square-div {
-    height: 60px;
-    width: 60px;
     background-color: blue;
-    border: solid aliceblue;
+    border: 1px solid aliceblue;
 }
